--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,9 +5,11 @@
   position: fixed;
   width: 100%;
   color: #fff;
+  font-size: 2rem;
   box-shadow: 0 14px 28px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.22);
   z-index: 10;
 }
 .navbar-brand {
   color: rgb(222,157,80);
+  font-size: 2rem;
 }
