--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
   height: 70px;
   position: relative;
   width: 100%;
-  color: #fff;
+  color: rgb(222,157,80);
   text-align: center;
   padding: 20px;
   box-shadow: 0 14px 28px rgba(0,0,0,.25), 0 10px 10px rgba(0,0,0,.22);
